# libKTX

./: LICENSE.md  README.md  meson.build
lib/: texture2.c  writer1.c  writer2.c
